[gd_scene load_steps=11 format=2]

[ext_resource path="res://HUD.gd" type="Script" id=1]
[ext_resource path="res://Font/Russo_One.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Bonus items/PNG/heart.png" type="Texture" id=3]
[ext_resource path="res://Bonus items/PNG/key.png" type="Texture" id=4]
[ext_resource path="res://Bonus items/PNG/coin_001.png" type="Texture" id=5]
[ext_resource path="res://Backgrounds/black.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 40
outline_color = Color( 0.0117647, 0.00392157, 0.00392157, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 70
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="DynamicFont" id=4]
size = 40
font_data = ExtResource( 2 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="CoinLabel" type="Label" parent="."]
margin_left = 458.0
margin_right = 697.0
margin_bottom = 98.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "00/00"
valign = 1

[node name="LifeLabel" type="Label" parent="."]
margin_left = 88.9324
margin_top = 0.397217
margin_right = 327.932
margin_bottom = 98.3972
custom_fonts/font = SubResource( 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "00"
valign = 1

[node name="KeyLabel" type="Label" parent="."]
margin_left = 248.244
margin_top = 0.359596
margin_right = 487.244
margin_bottom = 98.3596
custom_fonts/font = SubResource( 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "00/00"
valign = 1

[node name="ScoreLabel" type="Label" parent="."]
margin_left = 692.192
margin_top = -0.745667
margin_right = 931.192
margin_bottom = 97.2543
rect_pivot_offset = Vector2( 327.808, 40.7457 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "0000"
align = 2
valign = 1

[node name="Score" type="Label" parent="."]
margin_left = 674.0
margin_top = -1.0
margin_right = 913.0
margin_bottom = 97.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Score"
valign = 1

[node name="Life" type="Sprite" parent="."]
position = Vector2( 51.0545, 49.2615 )
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )

[node name="Key" type="Sprite" parent="."]
position = Vector2( 206.591, 48.3136 )
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )

[node name="Coin" type="Sprite" parent="."]
position = Vector2( 425.102, 46.5399 )
scale = Vector2( 2, 2 )
texture = ExtResource( 5 )

[node name="GameOver" type="Sprite" parent="."]
visible = false
position = Vector2( 480.051, 270.02 )
scale = Vector2( 0.644171, 0.724652 )
texture = ExtResource( 6 )

[node name="GameOverLabel" type="Label" parent="."]
visible = false
margin_right = 961.0
margin_bottom = 540.0
custom_fonts/font = SubResource( 2 )
text = "Game Over"
align = 1
valign = 1

[node name="EndGameLabel" type="Label" parent="."]
visible = false
margin_right = 956.0
margin_bottom = 540.0
custom_fonts/font = SubResource( 2 )
text = "Congratulations !"
align = 1
valign = 1
autowrap = true

[node name="PlayAgainButton" type="Button" parent="."]
pause_mode = 2
visible = false
margin_left = 364.0
margin_top = 353.0
margin_right = 610.0
margin_bottom = 420.0
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.533333, 0.298039, 0.890196, 1 )
custom_colors/font_color_hover = Color( 0.211765, 0.65098, 0.760784, 1 )
custom_colors/font_color_pressed = Color( 0.403922, 0.435294, 0.839216, 1 )
text = "Play Again"

[connection signal="button_up" from="PlayAgainButton" to="." method="_on_Button_button_up"]
